Package: aroma.core
===================

Version: 2.11.0 [2013-10-16]
o CLEANUP: Minor adjustments of NAMESPACE imports.
o Updated package dependencies.
o Now package requires R (>= 2.15.0) [and Bioc (>= 2.10.0)].


Version: 2.10.6 [2013-10-07]
o CLEANUP: Now explicitly importing only what is needed in NAMESPACE.
o BACKWARD COMPATIBILITY: For R (< 3.0.2) only the maximum of 500 
  S3 methods are declared in NAMESPACE.
o Updated package dependencies.


Version: 2.10.5 [2013-10-03]
o Added argument 'chromosomes' to ChromosomalModel() and setChromosomes()
  for the same class.  If not specified, the default is as before to infer
  the set of chromosomes from the UGP files.
o HELP: Now the sanity-check error that CopyNumberChromosomalModel throws
  gives a more informative error message suggesting to adjust argument
  'maxNAFraction' when setting up the model.


Version: 2.10.4 [2013-09-28]
o Now the 'aroma.core' Package object is also available when the
  package is only loaded (but not attached).
o CLEANUP: Now only importing the exact set of methods needed from
  the 'R.utils' package.


Version: 2.10.3 [2013-09-20]
o CLEANUP: Now only importing the exact set of methods needed from
  the 'matrixStats' package.
o ROBUSTNESS: Forgot to import R.methodsS3::appendVarArgs().
o Updated package dependencies.


Version: 2.10.2 [2013-09-11]
o CLEANUP: Backward-compatibility code for obsolete EBImage was
  no longer needed.
o CLEANUP: Updated package dependencies.


Version: 2.10.1 [2013-08-12]
o BUG FIX: exportAromaUnitPscnBinarySet() for AromaUnitTotalCnBinarySet
  would throw an error on "unknown argument 'names' to indexOf()".


Version: 2.10.0 [2013-08-03]
o Bumped version for CRAN submission.
o Updated package dependences.
o Package passes all redundancy tests.


Version: 2.9.7 [2013-07-20]
o CLEANUP: Replaced all internal x11() with dev.new() calls.
o CLEANUP: Moved more packages from Depends to Imports.
o Updated package dependences.


Version: 2.9.6 [2013-06-01]