@@ -370,7 +370,6 @@ S3method("allocate", "AromaTabularBinaryFile")
 S3method("as.character", "AromaTabularBinaryFile")
 S3method("colApply", "AromaTabularBinaryFile")
 S3method("colMeans", "AromaTabularBinaryFile")
-S3method("colMedians", "AromaTabularBinaryFile")
 S3method("colStats", "AromaTabularBinaryFile")
 S3method("colSums", "AromaTabularBinaryFile")
 S3method("dimnames<-", "AromaTabularBinaryFile")
