@@ -13,9 +13,6 @@ setMethodS3("colMeans", "default", function(...) {
   base::colMeans(...);
 })
 
-#colnames <- function(...) UseMethod("colnames", ...);
-#colnames.default <- function(...) base::colnames(...);
-
 write <- appendVarArgs(write);
 
 
